--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a country boy with big city heart.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Orginally from South Carolina</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Writing Poetry, reading about Behavioral Economics, Inventing Whatever comes to mind</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A position that allows me to create and test cutting edge technology</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Nashville, TN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>For better opportunites and to be introduced to new concepts</p>
     </section>
 
     <footer id="footer">
